# pilotdriven-ODSS

./: .gitignore  HANDOFF_MANIFEST.md  README.md
.github/workflows/: apply-controlled-library-patch.yml  apply-pertinent-brief-editorial.yml  bootstrap-wsss-surface-poc.yml  dashboard-ci.yml  (+3 more)
docs/: visual-route-briefing-v0.5.md
integration/v0.7/wsss-surface-poc/: OSM_SOURCE.md  README.md  pyproject.toml  requirements.txt
integration/v0.7/wsss-surface-poc/fixtures/: synthetic_wsss_surface_snapshot.json  wsss_regression_notams.json  wsss_surface_coverage.json  wsss_surface_sample_contract.json  wsss_surface_snapshot.json
integration/v0.7/wsss-surface-poc/odss_surface/: __init__.py  __main__.py  api.py  contract.py  models.py  notam.py  osm.py  resolver.py
integration/v0.7/wsss-surface-poc/pilotdriven-nextjs/: OdssSurfaceMap.tsx  README.md  surface-types.ts
integration/v0.7/wsss-surface-poc/scripts/: build_sample_contract.py  fetch_wsss_osm.py
integration/v0.7/wsss-surface-poc/static/: index.html  surface.css  surface.js
integration/v0.7/wsss-surface-poc/tests/: test_live_snapshot.py  test_surface.py
integration/v0.7/wsss-surface-poc/validation/: pytest.txt  sample-contract.txt
pilotdriven_odss_dashboard/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  buildspec.aws.yml  requirements.txt
scripts/: apply_controlled_library_patch.py  apply_pertinent_brief_editorial.py  finalize_pertinent_brief.py  fix_profile_chain_selection.py
validation/: pertinent-brief-editorial-tests.txt  pertinent-brief-full-tests.txt
(+107 files in other folders)
